--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Notes</string>
     <string name="first_note">Create your first note !</string>
     <string name="empty_search_result">File not found. Try searching again.</string>
+    <string name="search_hint">Search Notes</string>
 </resources>
