NoteDetails Screen created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="first_note">Create your first note !</string>
     <string name="empty_search_result">File not found. Try searching again.</string>
     <string name="search_hint">Search Notes</string>
+    <string name="note_title_hint">Title</string>
+    <string name="note_content_hint">Start Writing..</string>
 </resources>
