--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="search_hint">Search Notes</string>
     <string name="note_title_hint">Title</string>
     <string name="note_content_hint">Start Writing..</string>
+    <string name="note_create_success">Successfully created note</string>
+    <string name="note_update_success">Successfully updated note</string>
 </resources>
